-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-12-20T05:44:51.093Z

CREATE TYPE "end_type" AS ENUM (
  'tsumo',
  'ron',
  'draw',
  'fake_ron'
);

CREATE TYPE "pay_reason" AS ENUM (
  'tsumo',
  'ron',
  'bao',
  'fake_ron',
  'punish',
  'adjustment'
);

CREATE TYPE "win_type" AS ENUM (
  'ron',
  'tsumo',
  'bao'
);

CREATE TYPE "account_status" AS ENUM (
  'ACTIVE',
  'BANNED'
);

CREATE TABLE "users" (
  "id" text PRIMARY KEY,
  "public_id" text NOT NULL,
  "name" text NOT NULL,
  "nickname" text,
  "gender" int,
  "avatar_url" text,
  "is_guest" boolean NOT NULL DEFAULT true,
  "bio" text,
  "status" account_status,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "user_providers" (
  "id" integer PRIMARY KEY,
  "user_id" text,
  "provider_type" text NOT NULL,
  "provider_id" text NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "last_login_at" timestamp
);

CREATE TABLE "places" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint,
  "name" varchar,
  "location" varchar,
  "zip_code" varchar,
  "address" varchar,
  "memo" varchar
);

CREATE TABLE "rules" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "seq" int DEFAULT 1,
  "content" varchar,
  "user_id" bigint,
  "match_id" bigint,
  "invite_id" bigint,
  PRIMARY KEY ("id", "seq")
);

CREATE TABLE "points" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "type" varchar,
  "point" int,
  "user_id" bigint,
  "match_id" bigint,
  "invite_id" bigint,
  PRIMARY KEY ("id", "type")
);

CREATE TABLE "matches" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "place_id" bigint NOT NULL,
  "rule_id" bigint NOT NULL,
  "point_id" bigint NOT NULL,
  "match_date" timestamp DEFAULT (now()),
  "players" int DEFAULT 4,
  "base" int NOT NULL,
  "point" int NOT NULL,
  "status" int DEFAULT 0,
  "is_double_win" boolean,
  "is_triple_win" boolean,
  "eye_point" int DEFAULT 0,
  "kala_point" int DEFAULT 0,
  "venue_type" int,
  "venue_times" int,
  "venue_fee" int,
  "started_at" timestamp,
  "ended_at" timestamp
);

CREATE TABLE "match_player" (
  "match_id" bigint,
  "player_id" bigint,
  "permission" int DEFAULT 0,
  PRIMARY KEY ("match_id", "player_id")
);

CREATE TABLE "match_venue" (
  "match_id" bigint,
  "round_id" bigint,
  "game_id" bigint,
  "payer_id" bigint,
  "payee_id" bigint,
  "amount" int
);

CREATE TABLE "rounds" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "match_id" bigint,
  "round" int DEFAULT 1,
  "started_at" timestamp DEFAULT (now()),
  "ended_at" timestamp
);

CREATE TABLE "round_player" (
  "round_id" bigint,
  "player_id" bigint,
  "seat" int,
  PRIMARY KEY ("round_id", "player_id")
);

CREATE TABLE "games" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "round_id" bigint,
  "dealer_id" int,
  "wind" int,
  "wind_num" int,
  "continues" int DEFAULT 0,
  "end_type" end_type,
  "started_at" timestamp DEFAULT (now()),
  "ended_at" timestamp
);

CREATE TABLE "game_record" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "game_id" bigint,
  "pay_reason" pay_reason,
  "payer_id" bigint,
  "payee_id" bigint,
  "base" int DEFAULT 1,
  "point" int,
  "fold" int DEFAULT 1,
  "amount" int
);

CREATE TABLE "game_wins" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "game_id" bigint,
  "winner_id" bigint,
  "loser_id" bigint,
  "win_type" win_type,
  "total_point" int
);

CREATE TABLE "game_wins_detail" (
  "win_id" bigint,
  "point_type" varchar,
  "points" int
);

CREATE TABLE "codes" (
  "code_type" varchar,
  "code" varchar,
  "content" varchar,
  "created_at" timestamp,
  PRIMARY KEY ("code_type", "code")
);

CREATE UNIQUE INDEX ON "users" ("public_id");

CREATE UNIQUE INDEX ON "user_providers" ("provider_type", "provider_id");

COMMENT ON TABLE "users" IS '使用者/玩家';

COMMENT ON COLUMN "users"."public_id" IS '公開ID,加好友可用,可自定義';

COMMENT ON COLUMN "users"."nickname" IS '有值優先顯示此名稱';

COMMENT ON COLUMN "users"."gender" IS '性別';

COMMENT ON COLUMN "users"."avatar_url" IS '大頭貼';

COMMENT ON COLUMN "users"."is_guest" IS '是否為訪客';

COMMENT ON COLUMN "users"."bio" IS '簡介';

COMMENT ON COLUMN "users"."status" IS '帳號狀態';

COMMENT ON TABLE "user_providers" IS '使用者綁定資料 1-to-N';

COMMENT ON COLUMN "user_providers"."provider_type" IS 'phone, google, apple, meta';

COMMENT ON COLUMN "user_providers"."provider_id" IS 'unique id ';

COMMENT ON TABLE "places" IS '場地(揪咖、牌局)';

COMMENT ON COLUMN "places"."location" IS '粗略地址 e.g.台北101附近';

COMMENT ON COLUMN "places"."zip_code" IS '郵遞區號';

COMMENT ON COLUMN "places"."address" IS '詳細地址 欲參加者批准後才能看見';

COMMENT ON COLUMN "places"."memo" IS '簡述 e.g.內有貓咪';

COMMENT ON TABLE "rules" IS '規則表(逐列式)';

COMMENT ON COLUMN "rules"."seq" IS 'pk,也可用來排序';

COMMENT ON COLUMN "rules"."user_id" IS '使用者自定義';

COMMENT ON COLUMN "rules"."match_id" IS '牌局的規則';

COMMENT ON COLUMN "rules"."invite_id" IS '揪咖的規則';

COMMENT ON TABLE "points" IS '台數表';

COMMENT ON COLUMN "points"."type" IS 'from codes.code_type=''point'')';

COMMENT ON COLUMN "points"."user_id" IS '使用者自定義';

COMMENT ON COLUMN "points"."match_id" IS '牌局的台數表';

COMMENT ON COLUMN "points"."invite_id" IS '揪咖的台數表';

COMMENT ON TABLE "matches" IS '牌局';

COMMENT ON COLUMN "matches"."user_id" IS '開局者/主揪';

COMMENT ON COLUMN "matches"."players" IS 'P人麻將,可用來計風';

COMMENT ON COLUMN "matches"."base" IS '底';

COMMENT ON COLUMN "matches"."point" IS '台';

COMMENT ON COLUMN "matches"."status" IS '牌局狀態: 0:待開始,1:進行中,98:強制結束,99:結束';

COMMENT ON COLUMN "matches"."is_double_win" IS '是否雙響';

COMMENT ON COLUMN "matches"."is_triple_win" IS '是否三響';

COMMENT ON COLUMN "matches"."eye_point" IS '眼牌台數 0:沒有';

COMMENT ON COLUMN "matches"."kala_point" IS '卡拉碰台數 0:沒有';

COMMENT ON COLUMN "matches"."venue_type" IS '東的類型: 0:不收東 1:無上限 2:有上限(不補) 3:有上限(補)';

COMMENT ON COLUMN "matches"."venue_times" IS '每將東錢的次數 , null for 無上限';

COMMENT ON COLUMN "matches"."venue_fee" IS '每次東的費用';

COMMENT ON TABLE "match_player" IS '牌局玩家';

COMMENT ON COLUMN "match_player"."player_id" IS '包含開局者';

COMMENT ON COLUMN "match_player"."permission" IS '牌局權限';

COMMENT ON TABLE "match_venue" IS '東錢表,match prefix 是避免有將以外的東錢';

COMMENT ON COLUMN "match_venue"."round_id" IS '其它費用,則為null';

COMMENT ON COLUMN "match_venue"."game_id" IS '哪一把牌局產生的東錢';

COMMENT ON COLUMN "match_venue"."payer_id" IS '付款人通常為自摸者/胡牌者(補東)';

COMMENT ON COLUMN "match_venue"."payee_id" IS '收款人(場主id,null表示公基金)';

COMMENT ON TABLE "rounds" IS '將';

COMMENT ON COLUMN "rounds"."round" IS '第幾將';

COMMENT ON TABLE "round_player" IS '每將的玩家(但要包含場主)';

COMMENT ON COLUMN "round_player"."seat" IS '1:東, 2:南 , 3:西 , 4:北 考慮到多人打一家,故不納入pk';

COMMENT ON TABLE "games" IS '局';

COMMENT ON COLUMN "games"."dealer_id" IS '莊家';

COMMENT ON COLUMN "games"."wind" IS '風圈 (1:東, 2:南 , 3:西 , 4:北)';

COMMENT ON COLUMN "games"."wind_num" IS '風位 (1:東, 2:南 , 3:西 , 4:北)';

COMMENT ON COLUMN "games"."continues" IS '連莊數';

COMMENT ON COLUMN "games"."end_type" IS 'null:進行中,有值:已結算';

COMMENT ON TABLE "game_record" IS '收付狀況,1-to-N';

COMMENT ON COLUMN "game_record"."pay_reason" IS '付款原因';

COMMENT ON COLUMN "game_record"."payer_id" IS '付款者';

COMMENT ON COLUMN "game_record"."payee_id" IS '收款者';

COMMENT ON COLUMN "game_record"."base" IS '卡拉碰,眼牌,則為0';

COMMENT ON COLUMN "game_record"."fold" IS '倍數,for 骰規';

COMMENT ON TABLE "game_wins" IS '胡牌紀錄,1-to-1';

COMMENT ON COLUMN "game_wins"."winner_id" IS '自摸/胡牌者';

COMMENT ON COLUMN "game_wins"."loser_id" IS '放槍者，自摸則為 null';

COMMENT ON COLUMN "game_wins"."total_point" IS '總台數';

COMMENT ON TABLE "game_wins_detail" IS '胡牌牌型明細';

COMMENT ON COLUMN "game_wins_detail"."points" IS '該牌型的台數';

COMMENT ON TABLE "codes" IS '代碼檔';

COMMENT ON COLUMN "codes"."code_type" IS 'wind,point';

ALTER TABLE "user_providers" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "matches" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "places" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "matches" ADD FOREIGN KEY ("place_id") REFERENCES "places" ("id");

ALTER TABLE "rounds" ADD FOREIGN KEY ("match_id") REFERENCES "matches" ("id");

ALTER TABLE "match_player" ADD FOREIGN KEY ("match_id") REFERENCES "matches" ("id");

ALTER TABLE "round_player" ADD FOREIGN KEY ("round_id") REFERENCES "rounds" ("id");

ALTER TABLE "round_player" ADD FOREIGN KEY ("player_id") REFERENCES "users" ("id");

ALTER TABLE "round_player" ADD FOREIGN KEY ("player_id") REFERENCES "match_player" ("player_id");

ALTER TABLE "games" ADD FOREIGN KEY ("round_id") REFERENCES "rounds" ("id");

ALTER TABLE "games" ADD FOREIGN KEY ("dealer_id") REFERENCES "users" ("id");

ALTER TABLE "game_record" ADD FOREIGN KEY ("game_id") REFERENCES "games" ("id");

ALTER TABLE "game_wins" ADD FOREIGN KEY ("game_id") REFERENCES "games" ("id");

ALTER TABLE "game_wins_detail" ADD FOREIGN KEY ("win_id") REFERENCES "game_wins" ("id");

ALTER TABLE "rules" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "points" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "rules" ADD FOREIGN KEY ("match_id") REFERENCES "matches" ("id");

ALTER TABLE "points" ADD FOREIGN KEY ("match_id") REFERENCES "matches" ("id");

ALTER TABLE "match_venue" ADD FOREIGN KEY ("match_id") REFERENCES "matches" ("id");

ALTER TABLE "match_venue" ADD FOREIGN KEY ("round_id") REFERENCES "rounds" ("id");
