Project APP_JMJ {
  database_type: 'PostgreSQL'
  note : '''
  揪麻紀-JMJ 
  '''
}

Enum win_type {
  TSUMO [note:'自摸']
  RON   [note:'胡牌']
}

Enum end_type {
  TSUMO     [note:'自摸']
  RON       [note:'胡牌']
  DRAW      [note:'流局']
  FAKE_RON  [note:'詐胡']
}

Enum pay_reason {
  TSUMO     [note:'自摸']
  RON       [note:'胡牌']
  BAO       [note:'包牌(賠錢:二次相公,惡意相公,吊碰)']
  FAKE_RON  [note:'詐胡']
  KALA      [note:'卡拉碰']
  EYE       [note:'眼牌']
}

Enum status {
  BANNED
  ACTIVE
}


// --- Tables ---
Table users [note: '使用者/玩家'] {
  id text [pk,increment]
  public_id text [not null,note:'公開ID,加好友可用,可自定義']
  nickname text [not null,note:'麻吉+英數字隨機']
  gender int [null,note:'性別']
  avatar_url text [null,note:'大頭貼']
  is_valid boolean [default:false,note:'是否通過手機驗證,真人驗證']
  is_public boolean [default:true,note:'是否公開個人資訊(性別...等等)']
  is_guest boolean [not null,default:true,note:'是否為訪客']
  bio text [null,note:'簡介']
  status status
  updated_at timestamp [default:null,note:'用來紀錄update public ID的時間,不能頻繁異常publicID']
  created_at timestamp [default: `now()`]
  indexes {
    public_id [unique]
  }
}

Table user_providers [note:'使用者綁定資料 1-to-N'] {
  user_id text
  provider_type text [not null,note: 'google, apple, meta ...']
  provider_id text [not null,note: ' unique id ']
  email text [null]
  created_at timestamp [default: `now()`]
  last_login_at timestamp
  Indexes {
    (provider_type, provider_id) [unique]
  }
}

Table invites [note:'揪局'] {
  id bigint [pk,increment]
  user_id text [note:'主揪人/場主']
  title text [note:'標題 e.g. 大安歡樂場']
  base int [not null,note:'底']
  point int [not null,note:'台']
  rounds int [note:'預計將數']
  play_type text [default:'TW16',note:'臺灣16張,預留欄位可先不顯示']
  max_players int [not null,default:4,note:'玩家人數']
  current_players int [default:1,note:'玩家人數,考慮到場主可揪人但不打']
  started_at timestamp [not null,note:'開打時間,可選,此時間超過系統時間則不顯示']
  place_id bigint [not null,note:'牌局資訊-地點']
  rule_id bigint [not null,note:'牌局資訊-規則表']
  point_id bigint [not null,note:'牌局資訊-台數表']
  memo text [note:'備註 e.g.禁菸、禁帶人']
  status int [default: 0, note: '0:缺人中(可以顯示max-currnet的字,e.g. 三缺一), 1:成局, 2:已轉成牌局(Match), 9:流局/取消']
  created_at timestamp [default:`now()`,note:'建立日期']
  checks { 
    `rounds > 0` [name:'防呆']
  }
}

Table invite_apply [note: '揪咖報名申請'] {
  id bigint [pk, increment]
  invite_id bigint [not null]
  user_id text [not null, note: '申請者']
  status int [default: 0, note: '報名狀態 => 0:待審核, 1:已核准, 2:已拒絕, 3:使用者自行取消']
  message text [note: '申請留言 e.g. 我會晚5分鐘到 ']
  host_comment text [note: '主揪回覆/拒絕理由']
  created_at timestamp [default: `now()`]
  updated_at timestamp []
  indexes {
    (invite_id, user_id) [unique, note: '一人對一局只能報名一次']
  }
}

Table places [note: '場地(揪咖、牌局)'] {
  id bigint [pk, increment]
  user_id text [note:'使用者定義,可以N組?']
  name varchar
  location varchar [note:'粗略地址 e.g.台北101附近']
  zip_code varchar [note: '郵遞區號']
  address varchar [note:'詳細地址,參加者被批准進入後才能看見']
  memo varchar [note:'簡述 e.g.內有狗/貓咪']
  is_show boolean [default:false,note:'是否隱藏,影響[新增牌局]時選項']
  lng double [note:'經度']
  lat double [note:'緯度']
  google_place_id text [note:'google地點ID']
}

//揪咖、開局 的 資訊,(For 業務邏輯)
Table rules [note:'規則表(寬表)'] {
  id bigint [pk, increment]
  play_type text [default:'TW16',note:'TW16:台灣16張,JP13:日本13張,HK13:香港13張']
  user_id text [null,note:'使用者自定義']
  match_id bigint [null,note:'實際牌局的規則']
  invite_id bigint [null,note:'揪咖資訊的規則']
  is_serial_deal boolean [default:true,note:'是否啟用連莊台(2n+1)']
  is_double_win boolean [default:true,note:'是否雙響']
  is_triple_win boolean [default:false,note:'是否三響']
  fake_ron_base int [default:1 ,note:'詐胡底']
  fake_ron_point int [default:3 ,note:'詐胡台']
  fake_ron_deal boolean [default:true,note:'閒家詐胡莊家是否連莊']
  draw_deal boolean [default:true,note:'流局是否連莊']
  venue_type int [default:3,note: '東的類型: 0:不收東 1:無上限 2:有上限(不補) 3:有上限(補)']
  venue_times int [null,note: '每將東錢的次數 ,venue_type選2,3時必填 null for 無上限']
  venue_fee int [default:0,note:'這裡填費用,不一定是台數,venue_type> 0 必填']
  kala int [default:0,note:'卡拉碰,0:不啟用,預設1台']
  eye int [default:1,note:'眼牌,0:不啟用,預設1台']
  is_fold boolean [default:false,note:'是否啟用倍數,for 骰規']
  add_base int [default:false,note:'是否啟用加底,0:不啟用']
  match_mode int [default:0,note:'1:一般模式,2:比賽模式 ; 比賽模式:詐胡/卡拉碰/眼牌，最終結算時，僅扣分，其它人不加分']
  checks {
    `fake_ron_base >= 0` [name:'檢查詐胡底']
    `fake_ron_point >= 0` [name:'檢查詐胡台']
  }  
}

Table points_template [note:'台數表template'] {
  id bigint [pk,increment]
  user_id text
  play_type text [note:'from codes.code_type=`play_type`']
  name text [note:'自定義名稱,e.g.xx家']
  created_at timestamp [default: `now()`]
  indexes {
    (user_id,play_type) [unique]
    (user_id,name) [unique]
  }
}
//台數表template明細
Table points_template_detail [note:'台數表template明細'] {
  pt_id bigint
  point_type text [note:'from codes.code_type=`point_type`']
  point_code text [note:'from codes.code_type=`point_code`']
  point int [default:1,note:'台數']
  indexes {
    (pt_id,point_code) [unique]
  }
}

//揪咖資訊、開局
Table points [note:'台數表,copy from points_template_detail'] {
  id bigint [pk,increment]
  point_type text [note:'from codes.code_type=`point_type`']
  point_code text [note:'from codes.code_type=`point_code`']
  point int [default:1,note:'台數']
  match_id bigint [null,note:'牌局的台數表']
  invite_id bigint [null,note:'揪咖的台數表']
  indexes {
    (match_id,point_code) [unique]
    (invite_id,point_code) [unique]
  }
  checks {
    `point > 0` [name:'檢查台數正數']
  }
}

Table matches [note: '牌局'] { 
  id bigint [pk, increment]
  user_id text [not null,note: '開局者/主揪']
  place_id bigint [not null]
  title text [not null,note:'牌局標題']
  match_date timestamp [default: `now()`]
  players int [default: 4,note:'P人麻將,可用來計風']
  base int [not null,note: '底']
  point int [not null,note: '台']
  status int [default:0 ,note: '牌局狀態: 0:準備開始,1:進行中,98:強制結束,99:結束']
  started_at timestamp
  ended_at timestamp
}

Table match_entry [note:'牌局pin(牌局結束delete)']{
  pin varchar(6) [pk,note:'PIN碼 隨機數字6碼']
  match_id bigint
  created_at timestamp [default:`now()`]
}

Table match_players [note: '牌局玩家(要包含場主)']{
  match_id bigint
  player_id text [note:'包含場主 for 東錢']
  permission int [default: 0, note: '牌局權限']
  current_score int [note:'當前積分']
  final_score int [note:'最終積分']
  venue int [note:'收到的場地費']
  indexes {
    (match_id, player_id) [pk]
  }
}

Table match_venue [note:'東錢表,match prefix 是避免有將以外的東錢']{
  match_id bigint
  round_id bigint [null,note:'哪一將發生的東錢 ; 其它費用,則為null']
  game_id bigint [null,note:'哪一把牌局產生的東錢']
  payer_id text [note:'付款人為自摸者/胡牌者(補東)']
  payee_id text [null,note:'收款人(場主id,null表示公基金)']
  amount int
}

Table rounds [note: '將'] {
  id bigint [pk, increment]
  match_id bigint
  round int [default: 1,note: '第幾將']
  started_at timestamp [default:`now()`]
  ended_at timestamp [null]
}

Table round_players [note: '每將玩家的位置']{
  round_id bigint
  player_id text
  seat int [null,note: '1:東, 2:南 , 3:西 , 4:北 考慮到多人打一家,故不納入pk']
  is_play boolean [default:true,note:'count(is_paly=true) 必須 = match.player']
  indexes {
    (round_id, player_id) [pk]
  }
}

Table games [note: '局'] {
  id bigint [pk, increment]
  round_id bigint
  dealer_id int [note: '莊家']
  wind int [note: '風圈 (1:東, 2:南 , 3:西 , 4:北)']
  wind_seat int [note: '風位 (1:東, 2:南 , 3:西 , 4:北)']
  serials int [default: 0, note: '連莊數']
  end_type end_type [null, note:'結束類型.裁判視角lnull:進行中,有值:已結算']
  started_at timestamp [default:`now()`]
  ended_at timestamp [null]
}

Table game_records [note: '收付狀況,1-to-N'] {
  id bigint [pk, increment]
  game_id bigint
  pay_reason pay_reason [note:'付款原因']
  payer_id text [note:'付款者']
  payee_id text [note:'收款者']
  base int [default:1,note:'卡拉碰,眼牌,則為0']
  point int
  fold int [default:1,note:'倍數,for 骰規']
  amount int
}

Table game_wins [note: '胡牌紀錄(贏家視角)'] {
  id bigint [pk, increment]
  game_id bigint
  winner_id text [note: '自摸/胡牌者']
  loser_id text [note: '放槍者，自摸則為 null']
  win_type win_type
  total_point int [note: '總台數']
}

Table game_wins_detail [note: '胡牌牌型明細'] {
  win_id bigint
  point_code varchar
  points int [note: '該牌型的台數,from points where match_id']
}

Table codes [note:'代碼檔(lookup table)'] {
  code_type text [note:'point_code,play_type']
  code text
  content text
  created_at timestamp [default:`now()`]
  indexes {
    (code_type,code) [pk]
  }
}

// --- Relationships ---
Ref: users.id < user_providers.user_id

Ref: users.id < matches.user_id

Ref: users.id < places.user_id

Ref: users.id < points_template.user_id

Ref: users.id < invites.user_id

Ref: places.id < invites.place_id

Ref: invites.id < invite_apply.invite_id

Ref: users.id < invite_apply.user_id

Ref: places.id < matches.place_id 

Ref: matches.id < rounds.match_id

Ref: matches.id - match_entry.match_id

Ref: matches.id < match_players.match_id

Ref: rounds.id < round_players.round_id

Ref: users.id < round_players.player_id 

Ref: match_players.player_id - round_players.player_id

Ref: rounds.id < games.round_id 

Ref: users.id < games.dealer_id

Ref: games.id < game_records.game_id

Ref: games.id < game_wins.game_id

Ref: game_wins.id < game_wins_detail.win_id

Ref: users.id < rules.user_id

Ref: matches.id < rules.match_id

Ref: matches.id < points.match_id

Ref: matches.id < match_venue.match_id

Ref: rounds.id < match_venue.round_id